tests/reference/asr-template_error_02-a3d3b4c.stderr
syntax error: Token 'requires' (of type 'identifier') is unexpected here
  --> tests/errors/template_error_02.f90:15:9
   |
15 |         requires R(T, F)
   |         ^^^^^^^^ 
